--- a/diseno_sistemas/diseno_sistemas/frmpago.resx
+++ b/diseno_sistemas/diseno_sistemas/frmpago.resx
@@ -135,4 +135,61 @@
   <metadata name="Balance.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAvOSURBVGhD5Zl5WFTlHsezqK6GC4rWTXDYZE9QQSYTcyNwQcql0txFe1IzTM2KUEztqpmZa92u
+        dc3MFDUQBYZdWQZmZ/ZhBmaYhRnmnDMMDMPMsJzT78yMS13vH12h8Lm/5/k8Z/E9836/7+/3vuc98tj/
+        ZVy6dGnQhQsXvE6dPj3u5MmTfqdPn372+++/9yDvu5sMvLh27Zrn5cuXV+Tl5V1kMplKgUDQKRAKe4Ui
+        Ua9UJnPAdUtJSQkNjO38/PPPx506dWpgmMnPz/fMzc3NANFIXV0dUVlZ2ZOVlWWEURedOHGCeebMGca5
+        c+e4IF4jl8sdSqUSb2xsdJw/f/7czp07g8DMX2fk+vXr8XQ6XS4SiQgwge3duzcvIyNj39dff51Ko9EW
+        V1VVzS0vL59x9erVqYcOHYrfunXrm/v37z8Jzyiam5txeK59z54976anpz/p/sk/L7Kzs9fyeDwbh8Pp
+        AlGFMOJ7YGS3Wq3WFV1dXfOBl4E4INrhcITabDZ/s9lM4fP5gUeOHKGC2UMKhQKDZ/Bjx459l5aWNsT9
+        0/0fN27c2AA13VtRUWGGkf03lEYmCH2vp6dnfXd391IgEa6nApNA/AtACBAA+AN+drudIhQK/WHkF1ZX
+        V4vABAFZ+3nDhg1/c3fRfwGTcAabzbbX1NSYv/322+8wDMsE4duAjSD8LSAFhM8EoTEgNBIIAQIBf5I7
+        JgAKiqK+kI14GAgOZAP/YNeufevXr3/C3VXfx9mzZ4eWlZXJpVKp48svvyTFZ4BwcuRJ8SuARSA+EcRN
+        BbETOm22YKu109/a2UmBcz8oI8AOGXAZAMaZTCYfMDGDLxA0icRie3Jycry7u74PWE0yZTIZcfz4cVpD
+        Q+PHIHgLkNoF4h1dXYvtjq55NrtjhrXTHttu6QzHWi0U1NTu02ruoLS1W/3aLJ3+cN/f0mHz67Da/KAd
+        BfBVa3Q+R774Yo1Gq+n56eLFqnnz5vX9fDh48OBQSDXGYrFQMJIBo7jR0dW9xu7oXm6zdy2y2hzzOqz2
+        We0dtqmmts7oZmNbgLq51UdrMPvqkXa/FswSYMQ6AhAT0GoNQM1Wf2jn39pu8zNbbL5FJeUBBTRanrRe
+        hicmJS1w9dqHASvFKrFYDJPtm5tKVVOqzdG9rNPWtbSj0/Fqe4d9LoiYhZk7pxlN1hiNoS20QWPylzdh
+        FIXaRFHqWgOa9G2BakN7kIakxRKkNVqCdEhHoAG1BrSYOilg2Oebf559o0mr6f3HoYOXE5MS+25pPXDg
+        wCDYEmRptdrube/vTDMgZhhpx/w2i32+qc2eiJptM1sw6zSd0TJFqWubIFWZgiVKbLywAQsEAsRKU1B9
+        U2uwXG0OkWtI2kIatO3Bjbr2YGWzJUht6AjQGjvGZf1yM0QgEsqra+loZGTkKHf3Dx/bt2/3gDdpE6z5
+        hozMzxJkTaaAerU5tEHbFq3SW6hqg2Wqsrk9DgROEjRgEXwFFl4nx8K4MjSEI0OCefVYCF9hChM2tIYL
+        G1vDRY3mcJHSHCZWtYVJm9pC69XtwQptewCjTkHJpxX9JK6X4lPiprzk7v7hY9u2bWO4XK4tv4DGp5VU
+        zNUhVip0OFnYYJ7AqTdFcmTYCyByAhdgS9FIlhuGGA2vFSHh5JElQSPYMgzamiK58IwTeWtkncIcIWgw
+        h4Gh8QIFQrmSfWOvBObBvPnz102Lj++bbQaszUHw2u/Nzr5OL61gv9zY3BEHo0YVKduoPHlrLFNimlgr
+        xqJrRaiTGjfVQiSqSoBMqATocF4jgjZkO4AhccGUmqLYslYwZA7jybGAa7m0HWCAWJiSsotKpT7ulvBw
+        sW7duhBY+/Frv+RU3ChhxvEb2iay680xDIkptlqExVQK0ZhKwT0qSPhIzO06JOYWzziZBM4nV/B/265K
+        iE6uBuhOY6YIlhQbn5NXul0sleBgIH3KlCl9Y2DlypW+sP533cwrYJy/Wh5LF5miKoWmmNt8LO5WHUoF
+        XrxDOe8eZTzkxVIuQi3lGgGECtfUO//mbk+9XYfGkcaqhFgUXYiG3iys2E1uDpOSkt6Ljo7uGwNLlix5
+        BjZuCIvFaTzxXc602wJsUjnfBIKwaUA8ML2Ui04vcYLcBzq9mINML2Yj8UUAnMeXwPV97eLhOfgN5yBM
+        vsVtiSirYPwL9ll4VFTUa7AS9c0cWLp0Kfk1Va7TNdsOn/hxKXQYU8rDXirhYjOKudgsYHYxF51dzCFB
+        ZoPg2SD4LoWs+yCv7/3bLGAGPDMNjMQWVCujuTwhm8lg2kaNGhXq7v7hAzIwaMuWLZ8YDAbih4s5xwtq
+        tFQQP72Ig80p5GCJhWwsyQkLdYM4oT0I5m+uE6HdnCIW8jKYjqNVSlPqZXLHV18dr3n++edHurvvm5gz
+        Z04I7Bi7OFx+/fkcRiKM+owiDgri0QUgfiGNhS4sZGEpNCZ6DxaaUsBEnIBYOBqdgImFcCRZQBoBEzML
+        mYapNSzJeT5fgEP9pwcFBfXtR05CQsKTsIm7Am9j/ErurS8Kag1zitjoXDCQAsIXg9glNBa2FIQ7KSBh
+        kUfEBct9ZDiPS+C4GI6vAvPAyOwShmq5TCrvyP4lWzds2LBwd7d9G7AuR8MEszQ0qkxZBdyNMJLzoWRe
+        o7Gx10H8MmB5gYu3XKC/helkeQEDXQYGXs9nIIvyGZCF2uZXheIGFr9OgL+S8MrukPBxg91d9m1AFjxS
+        U1M/IT8DZXKVPKdMvhEEwMijb7hEYqtA4Op8JroGWAvXa8mj65y8h6wG0avAwIr8WuTNPHrLknx68zK+
+        pKlAIVfgJbWnel9M9vp0+vyxHu4u+z4mTZo09PDhw1lqtZpQKHXymxWNH+ZW6deAEad4gBS8HkgtYGKp
+        5NF1DvcYyDpgdV6NcWVupX5VAV23WSzXlcFv4RzxDbxUMYu4QJ/YO2e5d0bCG6P778ssLCxszNGjR69r
+        NBqiWY9glRzNueu31R/kVOg236g2vA0CN+bVIhvzGKgLOL8J93KrDG/n3NZtyrmlef8WS3dUpWlRGI1G
+        nCW7SeTpE4libTxRrJjqNJGw/O8fpayI6D8TgYGBozZt2vQV+XkJInqVaqOikq29klOuOnalWPVZVpHq
+        08tFqkwS8py8l12mOlrKUP/AE6m4Gq3OAcsynn3rNH6wJAr/RvwCft1AJU3gYAL/sTq2d/PWDekb317X
+        f+UUGhr6DLwxF8EXGgc+dnDyP62aNM3tsga9iidpFjD4Wk4tT8Nh1KnrWHUKBZsrxHi8ul4wTcC3tW5B
+        8oIDUUme11YefRbfVxgMJiYQOQYqTpoola0mmprUvbAT/vidd97pv0yAiSe8vb2fi42NXbtv376CwsJC
+        U21tLVFTU0NUV1cTVVVVBJ1OJ+BTlID7nWfOnGHNnTt3/+DBgyd5jxnp6en11OiJC+6aIJwm9DMJfauA
+        0Ol0hFqt6U1L2/ZRv5ogg0KhkEaGDxkyZLy/v//CmTNnvp+cnHwAOAir1ychISErn3766VhPT8+x0G7w
+        6NGj7+5zhox4fNTkBV5ZK448RxyhJeAC1W28u7ubsFgs+B0Trkxs6r9yuj9gHzPIy8vLY/jw4U+NGDHi
+        qaFDhz4J10/AC+q/bs5GeA/xTtu5OUsikeCwccThhUmACRxMkJnA1X9GOT1s+Pj4eGdmZl6WSmWkCWcJ
+        uTPx55bTwwSYGLV7955LbhPOEnJn4q8pp/8lSBN79kAmJHczQc6JR6+cXCakOJfrzMT9Ext/pMpJ4jLx
+        wDnxiJTTPRPkH0YexXK6Y4LgcrmkCaKnp+d3q1PahwPdxMjdu3f/7MoEFydN/H51gjlBZmJAl9NIZybE
+        EtLEg8qpx23i0SknvV7/H+X07rtbP1i2bNkjUE5iVznp9c45cbecqqvpTbAf83I3H5hxp5zE7nKCTOBu
+        E8SuXbt+hO8VT3fTgRt3yglM3C2n8vJyIWwcoyMiIv66P6D/kSAzkZ6e/lNFRWXrjh07smHnOyU8PHzg
+        rkQPirFjxw7z8PAIhu36GF9f34E7ef94PPbYr3M0v5i66u6tAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
